--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,7 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
-            "scripts": []
+            "styles": ["src/theme/variables.scss", "src/global.scss"]
           },
           "configurations": {
             "production": {
